# duit

./: Cargo.toml
crates/duit/: Cargo.toml
crates/duit-codegen/: Cargo.toml
crates/duit-codegen/src/: main.rs
crates/duit-core/: Cargo.toml
crates/duit-core/src/: lib.rs  spec.rs
crates/duit-core/src/spec/: widgets.rs
crates/duit-parser/: Cargo.toml
crates/duit-parser/src/: ast.rs  lexer.rs  parser.rs
crates/duit-platform/: Cargo.toml
crates/duit-platform/src/: lib.rs
crates/duit/examples/: framework.rs
crates/duit/examples/simple/: generated.rs  main.rs  root.yml
crates/duit/examples/todos/widgets/: root.yml  todo.yml
crates/duit/src/: color.rs  event.rs  lib.rs  spec.rs  style.rs  ui.rs  widget.rs  widgets.rs  window.rs
crates/duit/src/widgets/: button.rs  clickable.rs  container.rs  divider.rs  flex.rs  image.rs  pick_list.rs  progress_bar.rs  scrollable.rs  slider.rs  table.rs  text.rs  text_input.rs  tooltip.rs
examples/: en_us.ftl  menu.duit
themes/: default.yml
