[package]
name = "duit-platform"
version = "0.1.0"
edition = "2018"

[dependencies]
duit = { path = "../duit" }
dume = { git = "https://github.com/caelunshun/dume", branch = "experimental" }
glam = "0.17"
pollster = "0.2"
wgpu = "0.11"
winit = { version = "0.25", default-features = false, features = [ "x11" ] }
