[package]
name = "duit"
version = "0.1.0"
edition = "2018"

[dependencies]
ahash = "0.7"
duit-core = { path = "../duit-core" }
dume-renderer = { path = "/Users/caelum/dev/dume/renderer" }
glam = "0.17"
indexmap = { version = "1", features = [ "serde" ] }
palette = "0.5"
serde = { version = "1", features = [ "derive" ] }
serde_yaml = "0.8"
slotmap = "1"
thiserror = "1"
winit = { version = "0.25", default-features = false }

[dev-dependencies]
duit-platform = { path = "../duit-platform" }
pollster = "0.2"
rand = "0.8"
wgpu = "0.10"
winit = { version = "0.25", default-features = false, features = [ "x11" ] }

[[example]]
name = "simple"
